# SolarSystemExploration3

./: .gitattributes  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  allfiles.txt  cmake_install.cmake  default2.frag  default2.vert  main.cpp  main_backup.cpp  sse3  sse3.cbp  stb_image.cpp
include/: camera.hpp  celestialbody.hpp  filesystem.hpp  functionsupport.hpp  json_parser.hpp  mesh.hpp  model.hpp  shader.hpp  socket.hpp  stb_image.h  tinyfiledialogs.h  ui.hpp
include/glad/: glad.h
include/glm/: common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp
include/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
resources/models/: capsule.mtl  cylinder.mtl  rocket_engine.mtl
resources/planets/: callisto.json  earth.json  europa.json  ganymede.json  io.json  jupiter.json  mars.json  mercury.json  moon.json  neptune.json  pluto.json  saturn.json  uranus.json  venus.json
shaders/atmosphere/: atmosphere.frag  atmosphere.geom  atmosphere.vert
shaders/bloom/: bloom.frag
shaders/blur/: blur.frag  blur.geom  blur.vert
shaders/brdf/: brdf.frag  brdf.geom  brdf.vert
shaders/convolution/: skybox copy.geom  skybox copy.vert
shaders/default/: default.frag  default.geom  default.vert
shaders/depth/: depth.frag  depth.geom  depth.vert
shaders/equirectangular/: skybox.frag  skybox.geom  skybox.vert
shaders/hdr/: hdr.frag  hdr.geom
shaders/image/: image.frag  (+1 more)
src/: glad.c  tinyfiledialogs.c
(+207 files in other folders)
